fix the pagination alignment

--- a/src/Resources/assets/scss/admin.scss
+++ b/src/Resources/assets/scss/admin.scss
@@ -69,3 +69,8 @@ table {
 .page-header {
   margin-top: 0;
 }
+
+.pagination {
+  margin: auto;
+  width: 50%;
+}
